<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BioActivity">

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/bNombre"
       android:textSize="@dimen/title_size"
       android:textStyle="bold"
       android:layout_gravity="center_horizontal"
       android:paddingTop="@dimen/padding_form"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bTitulo"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorGray"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_person_male_1"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/padding_form"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bDetalle"
        android:textSize="@dimen/title_size"
        android:textColor="@color/colorGray"
        android:padding="@dimen/padding_form"
        android:justificationMode="inter_word"/>

</LinearLayout>