<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:orientation="vertical"
        android:padding="@dimen/padding_form"
        >

        <TextView
            android:id="@+id/tv_fNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fNombre"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_fCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fCorreo"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/tv_fMensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fMensaje"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="vertical"
        android:padding="0dp">

    <Button
        android:id="@+id/btnEnviarComentario"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/enviarComentario"
        android:textSize="@dimen/title_size"/>

    </LinearLayout>

</LinearLayout>